[package]
name = "launchy"
version = "0.4.0"
authors = ["kangalio <me@kangalio.net>"]
edition = "2018"
description = "Low-level bindings and high-level abstractions for the Novation Launchpad MIDI devices"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kangalio/launchy"
keywords = ["novation", "launchpad", "midi", "midi-controller", "lightshow"]
categories = ["api-bindings", "games", "graphics", "rendering", "multimedia::images"]

[dependencies]
midir = "0.9.1"
embedded-graphics = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
log = "0.4"

[dev-dependencies]
# For the example crate
nanorand = "0.7"
rodio = "0.15.0"
env_logger = "0.10"